# raytrc

./: Cargo.toml  README.md  image.ppm  settings.toml  world.json
src/: lib.rs  main.rs  ray.rs  rgb.rs  vec3.rs
src/hittables/: hit_record.rs  hittable_list.rs  hittables.rs  material.rs  mod.rs  sphere.rs
src/utility/: camera.rs  mod.rs  ray.rs  rgb.rs  settings.rs  vec3.rs
