[package]
name = "waytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.3"
rand = "0.8.5"
rayon = "1.5.3"
env_logger = "0.9.0"
log = "0.4.17"
serde = { version = "1.0.144", features = ["serde_derive"] }
serde_json = "1.0.85"
config = "0.13.2"
